# cf-bypass-cli

./: .gitignore  README.md  _smoke_test_monitor.py  pyproject.toml  run.bat  setup.bat
.claude/: settings.local.json
cf_bypass/: __init__.py  __main__.py  browser_session.py  cli.py  config.py  cookie_manager.py  exceptions.py  logging_config.py  orchestrator.py  proxy_checker.py  retry.py  utils.py
cf_bypass/batch/: __init__.py  processor.py
cf_bypass/fingerprint/: __init__.py  audio.py  canvas.py  consistency.py  fonts.py  generator.py  profile.py
cf_bypass/humanize/: __init__.py  behavior_synth.py  fatigue.py  keyboard.py  mouse.py  scroll.py  trajectory.py
cf_bypass/observability/: __init__.py  metrics.py  storage.py
cf_bypass/proxy/: __init__.py  health.py  pool.py  quality.py  rotation.py
cf_bypass/server/: app.py  models.py
cf_bypass/solvers/: __init__.py  base.py  dispatcher.py  hcaptcha.py  image_captcha.py  recaptcha_v2.py  turnstile.py
cf_bypass/strategies/: __init__.py  base.py  level1_cloudscraper.py  level2_curl_cffi.py  level3_playwright.py  level4_nodriver.py  stealth.py
docs/: RECOMMENDATIONS.md  plan.md  project-overview-and-enhancement.md  tasks.md  updatespec.md
tests/: test_batch.py  test_cli.py  test_config.py  test_cookie_manager.py  test_orchestrator.py  test_proxy_checker.py  test_server.py  test_utils.py
tests/fixtures/: challenge_response.html  sample_config.yaml  sample_cookies.json  success_response.html  urls.txt
tests/test_solvers/: test_turnstile.py
tests/test_strategies/: test_base.py  test_registry.py
(+6 files in other folders)
