[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cf-bypass-cli"
version = "0.1.0"
description = "Progressive Cloudflare WAF bypass CLI tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "cf-bypass contributors"},
]

dependencies = [
    "click>=8.1.0",
    "cloudscraper>=1.2.71",
    "curl-cffi>=0.7.0",
    "playwright>=1.45.0",
    "playwright-stealth>=1.0.6",
    "nodriver>=0.38.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
    "asgi-lifespan>=2.1.0",
]

[project.scripts]
cf-bypass = "cf_bypass.cli:main"

[tool.setuptools.packages.find]
include = ["cf_bypass*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
